# NeuGrasp-Net

./: .gitignore  README.md  ScreenCamera_2023-05-16-21-41-29.json  ScreenCamera_2023-05-20-17-48-26.json  ScreenCamera_2023-11-10-12-39-50.json  ScreenCamera_2023-11-30-11-20-31.json  abc1.ply  axes_matrix.npy  batch_size_search.txt  clutter_grasp_data_generator.py  commands  commands.txt  environment.yaml  environment.yml  environment_updated.yml  generate_visuals.py  input_sdf.npy  launch_slurm_datagen_edge.py  launch_slurm_eval_edge.py  launch_slurm_train_edge.py  load.ipynb  local_grasps.ipynb  network_hires.txt.py  num_workers_batch_size_search.txt  o3d_vis_screen_camera_params2.json  o3d_vis_screen_camera_params_depcrtd.json  package.xml  ray_marching_neu.ipynb  recon_sdf.npy  requirements.txt  summary_data_pile_train_random_raw_4M.txt  summary_data_pile_train_random_raw_4M_mildly_radomized_views.txt  summary_data_pile_train_random_raw_4M_radomized_GPG_only.txt  summary_data_pile_train_random_raw_4M_radomized_views.txt  summary_data_pile_train_random_raw_500K.txt  summary_data_pile_train_random_raw_HiRes_dummy.txt  summary_data_pile_train_random_raw_HiRes_tiny.txt  test.ipynb  test.npz  test_clutter_grasp.py  (+2 more)
.ipynb_checkpoints/: load-checkpoint.ipynb
contact_graspnet/: contact_grasp_estimator.py  data.py  inference.py  test.ipynb  test_scenes.py  visualization_utils.py
models/: edge_grasp_network.py  edge_grasper.py  vn_edge_grasp_network.py  vn_edge_grasper.py
nohup_logs/: dataset4M_2.out  dataset4M_3.out  dataset4M_4.out  dataset4M_random_views.out  train.out  (+17 more)
(+3518 files in other folders)
