<?xml version="1.0"?>
<package format="2">
    <name>vgn</name>
    <version>0.1.0</version>
    <description>NeuGraspNet</description>

    <maintainer email="anon@anon.anon">Anonymous</maintainer>

    <license>BSD</license>
    <url>https://github.com/temp</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
</package>
